Upgrade to Jakarta EE.