@@ -1,10 +1,11 @@
 package com.jslib.automata;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
-import js.lang.BugError;
+import com.jslib.lang.BugError;
 
 public class ActionFactory
 {
@@ -30,13 +31,26 @@ public class ActionFactory
 
     Class<? extends Action> clazz = loader.loadClass(actionClassName);
     try {
-      return clazz.newInstance();
+      return clazz.getDeclaredConstructor().newInstance();
     }
     catch(InstantiationException e) {
-      throw new BugError("Action class |%s| is not instantiable.", actionClassName);
+      throw new BugError("Action |%s| is not instantiable.", actionClassName);
     }
     catch(IllegalAccessException e) {
-      throw new BugError("Action class |%s| constructor is not accessible.", actionClassName);
+      throw new BugError("Action |%s| constructor is not accessible.", actionClassName);
+    }
+    catch(IllegalArgumentException e) {
+      throw new BugError("Impossible condition: illegal argument on action |%s| default constructor.", actionClassName);
+    }
+    catch(InvocationTargetException e) {
+      Throwable t = e.getCause() != null ? e.getCause() : e;
+      throw new BugError("Error execution action |%s| constructor. Root cause: %s: %s", actionClassName, t.getClass().getCanonicalName(), t.getMessage());
+    }
+    catch(NoSuchMethodException e) {
+      throw new BugError("Action |%s| has no default constructor.", actionClassName);
+    }
+    catch(SecurityException e) {
+      throw new BugError("Action |%s| default constructor is not public.", actionClassName);
     }
   }
 
